files/script/test/parse_error/def/test_def_error3.ll




def main())
{

}

#script("test/parse_error/def/test_def_error3.nl")